[package]
name = "rust_auth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = [ "serde"] }
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tls = "0.3.1"
